tests/ui/rust-2024/unsafe-extern-blocks/unsafe-items.edition2021.stderr
error[E0133]: call to unsafe function `test1` is unsafe and requires unsafe function or block
  --> $DIR/unsafe-items.rs:17:5
   |
LL |     test1(i);
   |     ^^^^^^^^ call to unsafe function
   |
   = note: consult the function's documentation for information on how to avoid undefined behavior

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0133`.
